syntax="proto3";
package brpc_demo;

option cc_generic_services = true;

message EchoRequest {
      string message = 1;
};

message EchoResponse {
      string message = 1;
};

service EchoService {
      rpc Echo(EchoRequest) returns (EchoResponse);
};
